# LaangUbot

./: .gitignore  DockerFile  README.md  app.json  config.env  config.py  docker-compose.yml  pyproject.toml  requirements.txt  sample.env  setup.py  start
.github/: publish.yml
LaangYB/: __init__.py  admin.py  alive.py  button.py  carbon.py  font.py  gcast.py  get_id.py  globals.py  help.py  info.py  langs.py  log.py  openai.py  paste.py  ping.py  pmpermit.py  purge.py  stickers.py  telegraph.py  tiktok.py  tools.py  translate.py  update.py  vars.py  vcplugin.py  vctools.py  xxx.py
Languanges/: id.yml
assistant/: __init__.py  callback.py  inline.py  start.py
