[tool.poetry]
name = "pylaang"
version = "0.1.0"
description = "Deskripsi paket Anda"
authors = ["Nama Anda <email@domain.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.packages]
include = ["src/pylaang"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
